Fixed Dark Mode

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -7,6 +7,5 @@
   justify-content: center;
   align-items: center;
   flex: 0.8 1;
-  margin-bottom: 10px;
   max-height: 70px;
 }
